// KeyValueStore.proto
syntax = "proto3";

package KeyValueStore;

service KeyValue {
  rpc Set(KeyValueRequest) returns (KeyValueResponse) {}
  rpc Get(KeyRequest) returns (KeyValueResponse) {}
  rpc Delete(KeyRequest) returns (KeyValueResponse) {}
}

message KeyValueRequest {
  string key = 1;
  string value = 2;
}

message KeyRequest {
  string key = 1;
}

message KeyValueResponse {
  string key = 1;
  string value = 2;
  bool success = 3;
}